<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:orientation="vertical"
  android:padding ="20dp"
  android:layout_width="wrap_content"
  android:layout_height="wrap_content">
  <LinearLayout android:layout_marginTop="@dimen/common_space"
	  android:layout_width="wrap_content"
	  android:layout_height="wrap_content">
	    <TextView
	        android:text="@string/phonenum"
	        android:layout_width="@dimen/modify_dialog_left_width"
	        android:gravity="right"
	        android:layout_height="wrap_content"
	        style="@style/normalBlackText" 
	    />
	    <EditText
	        android:layout_marginLeft="20dp"
	        android:layout_width="150dp"
	        android:layout_height="wrap_content"
	        android:id="@+id/phone_edit"
	        android:inputType="phone"/>	    
  </LinearLayout>
  <com.routon.inforelease.widget.CountdownButton android:id="@+id/btn_get_vertify"
	        android:text="@string/get_vertify_num"
	        android:clickable="true"        
	        android:layout_marginLeft="130dp"
	        android:layout_width="150dp"
	        android:layout_height="wrap_content"
	        android:gravity="center"
	        android:padding="5dp"
	        android:background="@drawable/round_rect_btn"
	        style="@style/normalBlackText" 
	    />
  <LinearLayout android:layout_marginTop="10dp"
	  android:layout_width="wrap_content"
	  android:layout_height="wrap_content">
	    <TextView 
	        android:text="@string/vertify_num"
	        android:layout_width="@dimen/modify_dialog_left_width"
	        android:gravity="right"
	        android:layout_height="wrap_content"
	        style="@style/normalBlackText" 
	    />
	    <EditText 
	        android:layout_marginLeft="20dp"
	        android:layout_width="150dp"
	        android:layout_height="wrap_content"
	        android:id="@+id/et_vertify" 
	    />
  </LinearLayout>
  <LinearLayout android:id = "@+id/newpwd_ll"
	  android:layout_width="wrap_content"
	  android:layout_height="wrap_content">
	    <TextView
	        android:text="@string/newpwd"
	        android:layout_width="@dimen/modify_dialog_left_width"
	        android:gravity="right"
	        android:layout_height="wrap_content"
	        style="@style/normalBlackText" 
	    />
	    <EditText
	        android:layout_marginLeft="20dp"
	        android:layout_width="150dp"
	        android:layout_height="wrap_content"
	        android:id="@+id/newpwd" 
	        android:inputType="textPassword"
	        android:hint="@string/hint_input_pwd"
	    />
  </LinearLayout>
  <LinearLayout android:id = "@+id/confirmnewpwd_ll"
	  android:layout_width="wrap_content"
	  android:layout_height="wrap_content">
	    <TextView
	        android:text="@string/confirmnewpwd"
	        android:layout_width="@dimen/modify_dialog_left_width"
	        android:gravity="right"
	        android:layout_height="wrap_content"
	        style="@style/normalBlackText" 
	    />
	    <EditText
	        android:layout_marginLeft="20dp"
	        android:layout_width="150dp"
	        android:layout_height="wrap_content"
	        android:id="@+id/confirmnewpwd"
	        android:inputType="textPassword" 
	        android:hint="@string/hint_input_pwd"
	    />
  </LinearLayout>
</LinearLayout>
