<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:pulltorefresh="http://schemas.android.com/apk/res/com.routon.inforelease"
    android:orientation="vertical">
    <include layout="@layout/create_titlebar" android:id="@+id/titlebar"/>
    <LinearLayout android:paddingTop = "20dp"
        android:paddingBottom = "20dp"
    	android:layout_below="@id/titlebar"
    	android:id="@+id/typelist"
    	android:layout_width="match_parent"
    	android:layout_height="wrap_content"
   		android:background="#F7F7F7">
	  	<TextView
	          	android:id="@+id/tv_all"
	            android:layout_width="100dp"
	        	android:layout_height="wrap_content"
	        	android:gravity="center"
	            android:text="@string/all"
	            android:textSize="@dimen/normal_font" />
	  	<TextView
	          	android:id="@+id/tv_online"
	            android:layout_width="100dp"
	        	android:layout_height="wrap_content"
	        	android:gravity="center"
	            android:text="@string/online"
	            android:textSize="@dimen/normal_font" />
	  	<TextView
	          	android:id="@+id/tv_offline"
	            android:layout_width="100dp"
	        	android:layout_height="wrap_content"
	        	android:gravity="center"
	            android:text="@string/offline"
	            android:textSize="@dimen/normal_font" />
	</LinearLayout>
	<com.handmark.pulltorefresh.library.PullToRefreshListView
	    android:layout_below="@id/typelist"
        android:id="@+id/lv_terminal"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:fastScrollEnabled="true"
    />
</RelativeLayout>
