<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="1" >

        <GridView
            android:id="@+id/material_adapter_view_grid"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:numColumns="2"
	        android:paddingTop="@dimen/common_space"
		    android:verticalSpacing="@dimen/common_space" 
		    android:horizontalSpacing="@dimen/common_space"
            android:visibility="gone" />

        <ListView
            android:id="@+id/material_adapter_view_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/material_bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bottom_bar"
        android:orientation="horizontal"
        android:paddingBottom="5dp"
        android:paddingTop="10dp"
        android:weightSum="4" >

        <Button
            android:id="@+id/btn_attribute_setting"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/ic_bg"
            android:drawableTop="@drawable/ic_attr_setting"
            android:text="@string/attr_setting"
            android:textColor="@color/black"
            android:textSize="@dimen/normal_font" />

        <Button
            android:id="@+id/btn_time_setting"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/ic_bg"
            android:drawableTop="@drawable/ic_time_setting"
            android:text="@string/time_setting"
            android:textColor="@color/black"
            android:textSize="@dimen/normal_font" />

        <Button
            android:id="@+id/btn_add_material"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/ic_bg"
            android:drawableTop="@drawable/ic_add_material"
            android:text="@string/add_material"
            android:textColor="@color/black"
            android:textSize="@dimen/normal_font" />

        <Button
            android:id="@+id/btn_delete_ad"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/ic_bg"
            android:drawableTop="@drawable/ic_delete_material"
            android:text="@string/delete_ad"
            android:textColor="@color/black"
            android:textSize="@dimen/normal_font" />
    </LinearLayout>

</LinearLayout>