<?xml version="1.0" encoding="utf-8"?>

	<LinearLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    	android:layout_width="match_parent"
    	android:layout_height="match_parent"
    	android:orientation="vertical" >
    <ListView
        android:id="@+id/list_time"
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="1" />
     <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
	<CheckBox 
        android:id="@+id/select_all"
        android:checked="true"
        android:textSize="20sp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_centerHorizontal="true"
        android:text="@string/modify_all_text"
        android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
        android:button="@drawable/checkbox_selector_tag"/>
	</RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bottom_bar"
        android:orientation="horizontal"
        android:paddingBottom="5dp"
        android:paddingTop="15dp"
        android:weightSum="4" >

        <Button
            android:id="@+id/btn_add_time"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/ic_bg"
            android:drawableTop="@drawable/ic_add_material"
            android:text="@string/add_time"
            android:textColor="@color/black"
            android:textSize="@dimen/normal_font" />
         <Button
            android:id="@+id/btn_del_time"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/ic_bg"
            android:drawableTop="@drawable/ic_delete_material"
            android:text="@string/delete"
            android:textColor="@color/black"
            android:textSize="@dimen/normal_font" />
    </LinearLayout>

</LinearLayout>
