<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/login_bg">
    <ImageView  
           android:id="@+id/icon"         
           android:layout_width="30dp"  
           android:layout_height="30dp"  
           android:layout_alignParentRight="true"  
           android:src ="@drawable/ic_launcher"/>  
    <ImageView  
           android:layout_toLeftOf="@id/icon"
           android:layout_marginRight="20dp" 
           android:id="@+id/iv_company"
           android:src="@drawable/ic_company"
           android:layout_width="30dp"
           android:layout_height="30dp"/>
           
    <!-- 密码 text -->  
    <EditText  
           android:id="@+id/password_edit"         
           android:layout_width="fill_parent"  
           android:layout_height="wrap_content" 
           android:drawablePadding="6dp" 
           android:hint="@string/login_label_password"  
           android:layout_centerInParent="true"  
           android:password="true"  
           android:singleLine="true"  
           android:drawableLeft="@drawable/ic_passwd"
           android:inputType="textPassword"/>  
     <!-- 账号 -->  
    <EditText  
           android:id="@+id/username_edit"  
           android:layout_above="@id/password_edit"  
           android:layout_width="fill_parent"  
           android:layout_height="wrap_content"  
           android:hint="@string/login_username_hint"  
           android:singleLine="true"  
           android:layout_marginBottom="30dip"    
           android:drawablePadding="6dp"       
           android:drawableLeft="@drawable/ic_name"
           android:inputType="text"/> 

    <com.routon.inforelease.widget.CircleImageView  
           android:layout_centerHorizontal="true"   
           android:layout_marginBottom="20dip"
           android:layout_above="@id/username_edit"       
           android:id="@+id/profilephoto_iv"
           android:src="@drawable/default_profile_photo"
           android:layout_width="100dp"
           android:layout_height="100dp"/>
   <CheckBox  android:layout_marginTop="30dip"  
            android:id="@+id/cb_mima"  
            android:layout_below="@id/password_edit"  
            android:layout_width="wrap_content"  
            android:layout_height="wrap_content"  
            android:text="记住密码"  
            android:textColor="@color/gray" />  
  
  <CheckBox  
            android:id="@+id/cb_auto"  
            android:layout_width="wrap_content"  
            android:layout_height="wrap_content"  
            android:layout_below="@id/password_edit"   
            android:layout_marginTop="30dip"  
            android:layout_alignRight="@id/password_edit"
            android:text="自动登录"  
            android:textColor="@color/gray" />  
    <!-- 登录button -->  
    <Button  
       	   android:layout_marginTop="30dip"  
           android:id="@+id/signin_button"  
           android:layout_width="fill_parent"  
           android:layout_height="wrap_content"  
           android:layout_below="@id/cb_mima"          
           android:background="@drawable/shape_button_round" 
           style="@style/normalText"
           android:text="@string/login_label_signin"  
    /> 
    <TextView 
         android:layout_below="@id/signin_button" 
         android:layout_marginTop="30dip"    
	     android:id="@+id/forget_passwd_text"
	     android:text="@string/forget_passwd"  
	     android:layout_width="fill_parent"  
	     android:layout_height="wrap_content"  
	     android:gravity="center"
	     android:clickable="true"      
	     style="@style/linkText"
	     android:autoLink="all"/>   
</RelativeLayout>
